# zpl

./: .gitignore  Cargo.toml  README.md  test.zpl
cli/: Cargo.toml
cli/src/: main.rs
docs/commands/: README.md
docs/commands/other/: ADDBREAK.md  ADVANCED.md  ALLOWED.md  ASCII.md  AUTONUM.md  A_.md  CISDFCRC16.md  CSV.md  CTRL-C.md  DELBREAK.md  ERROR.md  FIELD.md  FONTS.md  GOTO_GOSUB.md  HTTP.md  INSERTROW.md  INTRODUCTION.md  MIRROR.md  ON.md  OUTBYTE.md  PDFIUM.md  REAL.md  RESETTING.md  RETRIEVING.md  SEND.md  SENDING.md  SGD.md  SGDS.md  USING.md  ZEBRA.md
docs/commands/sgd/: ALERTS_CONDITIONS.md  ALERTS_CONFIGURED.md  ALERTS_DESTINATIONS.md  ALERTS_HTTP_AUTHENTICATION_ADD.md  ALERTS_HTTP_AUTHENTICATION_ENTRIES.md  ALERTS_HTTP_AUTHENTICATION_REMOVE.md  ALERTS_HTTP_LOGGING_CLEAR.md  ALERTS_HTTP_LOGGING_ENTRIES.md  ALERTS_HTTP_LOGGING_MAX_ENTRIES.md  ALERTS_HTTP_PROXY.md  ALERTS_SEND_CURRENT_STATUS_ALERTS.md  ALERTS_TRACKED_SETTINGS_CLEAR_LOG.md  ALERTS_TRACKED_SETTINGS_LOG_TRACKED.md  ALERTS_TRACKED_SETTINGS_MAX_LOG_ENTRIES.md  ALERTS_TRACKED_SGDS_LOG.md  ALERTS_TRACKED_SGDS_MAX_LOG_ENTRIES.md  ALERTS_TRACKED_SGDS_ZBI_NOTIFIED.md  APL_ENABLE.md  APL_FRAMEWORK_VERSION.md  APL_SETTINGS.md  APL_VERSION.md  (+847 more)
png-renderer/: Cargo.toml  README.md
png-renderer/examples/: simple.rs
png-renderer/src/: lib.rs
zpl-parser/: Cargo.toml  README.md
zpl-parser/src/: command.rs  error.rs  lib.rs  parser.rs
zpl-parser/tests/: parser_tests.rs
zpl-state-manager/: Cargo.toml
zpl-state-manager/src/: lib.rs
zpl-tokenizer/: Cargo.toml
zpl-tokenizer/src/: lib.rs
(+305 files in other folders)
